--- a/templates/components/portrait.hbs
+++ b/templates/components/portrait.hbs
@@ -30,10 +30,34 @@
     {{#if name}}<div class="comp-title shadowed">{{name}}</div>{{/if}}
   </div>
 
+  {{#if (test "Acquaintance" "in" system.tags)}}
+  {{#unless (test system.status "==" false)}}
+  <div class="comp-status-toggle status-toggle shadowed">
+    {{#if (test system.status "==" -1)}}
+    <span class="status-negative">▼</span>
+    {{!-- <i class="fa-sharp fa-solid fa-caret-up fa-rotate-180"></i> --}}
+    {{else}}{{#if (test system.status "==" 1)}}
+    <span class="status-positive">▲</span>
+    {{!-- <i class="fa-sharp fa-solid fa-caret-up"></i> --}}
+    {{else}}
+    <span class="status-neutral">◊</span>
+    {{!-- <i class="fa-sharp fa-regular fa-diamond"></i> --}}
+    {{/if}}
+    {{/if}}
+  </div>
+  {{/unless}}
+  {{/if}}
+
   {{#if (test id "&&" remButton)}}
   <a class="comp-control comp-delete comp-button" title="Delete item">
     <i class="fa-sharp fa-solid fa-xmark"></i>
   </a>
   {{/if}}
+
+	{{#if tooltip}}
+	<div class="tooltip {{tooltipClass}}">
+		{{{tooltip}}}
+	</div>
+	{{/if}}
 
 </div>
